; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_llrun_decode_int.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_llrun_decode_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_decoder = type { i32*, i32, %struct.bitreader }
%struct.bitreader = type { i32 }

@HUFFMAN_MAX_CODE_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.list_decoder*)* @llrun_decode_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @llrun_decode_int(%struct.list_decoder* %0) #0 {
  %2 = alloca %struct.list_decoder*, align 8
  %3 = alloca %struct.bitreader*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.list_decoder* %0, %struct.list_decoder** %2, align 8
  %6 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %7 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %6, i32 0, i32 2
  store %struct.bitreader* %7, %struct.bitreader** %3, align 8
  %8 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %9 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  store i32* %10, i32** %4, align 8
  %11 = load %struct.bitreader*, %struct.bitreader** %3, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* @HUFFMAN_MAX_CODE_LENGTH, align 4
  %15 = add nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %13, i64 %16
  %18 = call i32 @bread_huffman_decode_int(%struct.bitreader* %11, i32* %12, i32* %17)
  store i32 %18, i32* %5, align 4
  %19 = load %struct.bitreader*, %struct.bitreader** %3, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @bread_nbits(%struct.bitreader* %19, i32 %20)
  %22 = load i32, i32* %5, align 4
  %23 = shl i32 1, %22
  %24 = add nsw i32 %21, %23
  %25 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %26 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 8
  %28 = add nsw i32 %27, %24
  store i32 %28, i32* %26, align 8
  ret i32 %28
}

declare dso_local i32 @bread_huffman_decode_int(%struct.bitreader*, i32*, i32*) #1

declare dso_local i32 @bread_nbits(%struct.bitreader*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
